Modified page content for competences.html and contact.html

--- a/contact.html
+++ b/contact.html
@@ -59,21 +59,7 @@
                 <h1>Contactez-moi</h1>
                 <p>Vous avez des questions ou des propositions ? N'hésitez pas à me contacter !</p>
             </div>
-
-            <div class="contact-content">
-                <p>Je suis toujours ouvert à de nouvelles opportunités et collaborations. Que vous ayez une question sur un projet, une proposition de partenariat, ou que vous souhaitiez simplement en savoir plus sur mes services, je serais ravi de vous aider. Vous pouvez me contacter via le formulaire ci-dessous ou en utilisant les informations de contact fournies.</p>
-                <p>Je m'efforce de répondre à tous les messages dans les 24 heures. Si vous avez une demande urgente, veuillez indiquer cela dans votre message et je ferai de mon mieux pour vous répondre rapidement. Merci de votre intérêt et j'ai hâte de discuter avec vous !</p>
-                <p>Voici quelques exemples de types de demandes que je traite régulièrement :</p>
-                <ul>
-                    <li>Questions sur mes compétences et expériences en développement web et design.</li>
-                    <li>Propositions de projets ou de collaborations.</li>
-                    <li>Demandes de devis pour des services de développement web ou de design.</li>
-                    <li>Feedback sur mon portfolio ou mes projets.</li>
-                    <li>Questions générales sur le design, le développement web, ou le UI/UX.</li>
-                </ul>
-                <p>Je suis particulièrement intéressé par les projets innovants qui me permettent de repousser les limites de la créativité et de la technologie. N'hésitez pas à me contacter pour discuter de vos idées et voir comment nous pouvons travailler ensemble pour les réaliser. Vous pouvez également me suivre sur GitHub et LinkedIn pour rester informé de mes dernières créations et collaborations.</p>
-            </div
-
+            
             <form id="contact-form" action="submit_contact.php" method="POST">
                 <div class="form-group">
                     <label for="name">Nom</label>
@@ -89,6 +75,20 @@
                 </div>
                 <button type="submit">Envoyer</button>
             </form>
+
+            <div class="contact-content">
+                <p>Je suis toujours ouvert à de nouvelles opportunités et collaborations. Que vous ayez une question sur un projet, une proposition de partenariat, ou que vous souhaitiez simplement en savoir plus sur mes services, je serais ravi de vous aider. Vous pouvez me contacter via le formulaire ci-dessous ou en utilisant les informations de contact fournies.</p>
+                <p>Je m'efforce de répondre à tous les messages dans les 24 heures. Si vous avez une demande urgente, veuillez indiquer cela dans votre message et je ferai de mon mieux pour vous répondre rapidement. Merci de votre intérêt et j'ai hâte de discuter avec vous !</p>
+                <p>Voici quelques exemples de types de demandes que je traite régulièrement :</p>
+                <ul>
+                    <li>Questions sur mes compétences et expériences en développement web et design.</li>
+                    <li>Propositions de projets ou de collaborations.</li>
+                    <li>Demandes de devis pour des services de développement web ou de design.</li>
+                    <li>Feedback sur mon portfolio ou mes projets.</li>
+                    <li>Questions générales sur le design, le développement web, ou le UI/UX.</li>
+                </ul>
+                <p>Je suis particulièrement intéressé par les projets innovants qui me permettent de repousser les limites de la créativité et de la technologie. N'hésitez pas à me contacter pour discuter de vos idées et voir comment nous pouvons travailler ensemble pour les réaliser. Vous pouvez également me suivre sur GitHub et LinkedIn pour rester informé de mes dernières créations et collaborations.</p>
+            </div>
         </section>
         <p>Je suis particulièrement intéressé par les projets innovants qui me permettent de repousser les limites de la créativité et de la technologie. N'hésitez pas à me contacter pour discuter de vos idées et voir comment nous pouvons travailler ensemble pour les réaliser.</p>
     </main>
