le même projet que j'avais mais j'ai changé le Repo pour que le lien soit propre et les fonctionnalitées de sécurité fonctionnent

--- a/curriculum.html
+++ b/curriculum.html
@@ -10,13 +10,13 @@
     <link rel="icon" href="icon192.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="canonical" href="https://el-bika.github.io/archi-tp/curriculum.html">
+    <link rel="canonical" href="https://el-bika.github.io/curriculum.html">
 
     <!-- Open Graph Metadata -->
     <meta property="og:title" content="CV de Bika - Développeur Web et Designer">
     <meta property="og:description" content="Découvrez le parcours, les compétences et les expériences de Bika, développeur web et designer passionné.">
     <meta property="og:image" content="Cv_Thumbnail.jpg">
-    <meta property="og:url" content="https://el-bika.github.io/archi-tp/curriculum.html">
+    <meta property="og:url" content="https://el-bika.github.io/curriculum.html">
     <meta property="og:type" content="website">
 
     <!-- Twitter Card Metadata -->
