--- a/contact.html
+++ b/contact.html
@@ -10,13 +10,13 @@
     <link rel="icon" href="icon192.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="canonical" href="https://el-bika.github.io/archi-tp/contact.html">
+    <link rel="canonical" href="https://el-bika.github.io/contact.html">
 
     <!-- Open Graph Metadata -->
     <meta property="og:title" content="Contactez Bika - Développeur Web et Designer">
     <meta property="og:description" content="Contactez Bika pour toute question ou proposition concernant le design et le développement web ainsi que le ui/ux design.">
     <meta property="og:image" content="Contact_Thumbnail.jpg">
-    <meta property="og:url" content="https://el-bika.github.io/archi-tp/contact.html">
+    <meta property="og:url" content="https://el-bika.github.io/contact.html">
     <meta property="og:type" content="website">
 
     <!-- Twitter Card Metadata -->
