--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <link rel="icon" href="icon192.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="canonical" href="https://el-bika.github.io/archi-tp/index.html">
+    <link rel="canonical" href="https://el-bika.github.io/index.html">
 
     <!-- Open Graph Metadata -->
     <meta property="og:title" content="Portfolio de Bika">
     <meta property="og:description" content="Bienvenue sur le portfolio de Bika. Découvrez mes compétences, projets et expériences en design et développement web.">
     <meta property="og:image" content="Accueil_Thumbnail.jpg">
-    <meta property="og:url" content="https://el-bika.github.io/archi-tp/index.html">
+    <meta property="og:url" content="https://el-bika.github.io/index.html">
     <meta property="og:type" content="website">
 
     <!-- Twitter Card Metadata -->
