--- a/portfolio.html
+++ b/portfolio.html
@@ -10,13 +10,13 @@
     <link rel="icon" href="icon192.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="canonical" href="https://el-bika.github.io/archi-tp/portfolio.html">
+    <link rel="canonical" href="https://el-bika.github.io/portfolio.html">
 
     <!-- Open Graph Metadata -->
     <meta property="og:title" content="Portfolio de Bika - Projets et Créations">
     <meta property="og:description" content="Découvrez les projets et créations de Bika, un passionné de design et de développement web. Explorez mes affiches, couvertures et designs modernes.">
     <meta property="og:image" content="Portfolio_Thumbnail.jpg">
-    <meta property="og:url" content="https://el-bika.github.io/archi-tp/portfolio.html">
+    <meta property="og:url" content="https://el-bika.github.io/portfolio.html">
     <meta property="og:type" content="website">
 
     <!-- Twitter Card Metadata -->
